--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://subconverter.oss-ap-southeast-1.al
 VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://sub.fix.qzz.io"
 
 # 短链接后端
-VUE_APP_MYURLS_DEFAULT_BACKEND = "https://v1.mk"
+VUE_APP_MYURLS_DEFAULT_BACKEND = "https://pastebin.2.0.0.0.f.6.0.0.0.7.4.0.1.0.0.2.ip6.arpa"
 
 # 文本托管后端
-VUE_APP_CONFIG_UPLOAD_BACKEND = "https://subapi.v1.mk"
+VUE_APP_CONFIG_UPLOAD_BACKEND = "https://pastebin.2.0.0.0.f.6.0.0.0.7.4.0.1.0.0.2.ip6.arpa"
