--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ VUE_APP_FILTER_CONFIG = "https://github.com/tindy2013/subconverter/blob/a24cb7c0
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RemoteConfig/universal/urltest.ini"
 
 # API 后端
-VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://sub.fix.qzz.io"
+VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://subs.fix.qzz.io"
 
 # 短链接后端
 VUE_APP_MYURLS_DEFAULT_BACKEND = "https://pastebin.2.0.0.0.f.6.0.0.0.7.4.0.1.0.0.2.ip6.arpa"
